--- a/vc16/TSE.vcxproj
+++ b/vc16/TSE.vcxproj
@@ -89,7 +89,7 @@
     </Midl>
     <ClCompile>
       <Optimization>Disabled</Optimization>
-      <AdditionalIncludeDirectories>../lib/vorbis/include;../lib/zlib;../lib/lungif;../lib/lpng;../lib/ljpeg;../lib/lmng;../lib/openal/win32;../lib/fmod/inc;../lib/libqslim;../engine;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>../lib/discord;../lib/vorbis/include;../lib/zlib;../lib/lungif;../lib/lpng;../lib/ljpeg;../lib/lmng;../lib/openal/win32;../lib/fmod/inc;../lib/libqslim;../engine;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>TORQUE_DEBUG;D3D_DEBUG_INFO;UNICODE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <BasicRuntimeChecks>EnableFastChecks</BasicRuntimeChecks>
       <RuntimeLibrary>MultiThreadedDebugDLL</RuntimeLibrary>
@@ -106,7 +106,7 @@
       <Culture>0x0409</Culture>
     </ResourceCompile>
     <Link>
-      <AdditionalDependencies>ljpeg_DEBUG.lib;lpng_DEBUG.lib;lungif_DEBUG.lib;lmng_DEBUG.lib;zlib_DEBUG.lib;d3d9.lib;dxerr.lib;d3dx9.lib;COMCTL32.LIB;COMDLG32.LIB;USER32.LIB;ADVAPI32.LIB;GDI32.LIB;WINMM.LIB;WSOCK32.LIB;vfw32.lib;../lib/vorbis/win32/ogg_static.lib;../lib/vorbis/win32/vorbis_static_mt.lib;../lib/fmod/lib/fmodex_vc.lib;imm32.lib;version.lib;libqslim_DEBUG.lib;ole32.lib;oleaut32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>ljpeg_DEBUG.lib;lpng_DEBUG.lib;lungif_DEBUG.lib;lmng_DEBUG.lib;zlib_DEBUG.lib;d3d9.lib;dxerr.lib;d3dx9.lib;COMCTL32.LIB;COMDLG32.LIB;USER32.LIB;ADVAPI32.LIB;GDI32.LIB;WINMM.LIB;WSOCK32.LIB;vfw32.lib;../lib/vorbis/win32/ogg_static.lib;../lib/vorbis/win32/vorbis_static_mt.lib;../lib/fmod/lib/fmodex_vc.lib;imm32.lib;version.lib;libqslim_DEBUG.lib;ole32.lib;oleaut32.lib;../lib/discord/discord_game_sdk.dll.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <SuppressStartupBanner>true</SuppressStartupBanner>
       <AdditionalLibraryDirectories>../lib/out.VC16.win32.debug/;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <IgnoreAllDefaultLibraries>false</IgnoreAllDefaultLibraries>
@@ -129,7 +129,7 @@
     <ClCompile>
       <Optimization>MaxSpeed</Optimization>
       <InlineFunctionExpansion>OnlyExplicitInline</InlineFunctionExpansion>
-      <AdditionalIncludeDirectories>../lib/libqslim;../lib/vorbis/include;../lib/zlib;../lib/lungif;../lib/lpng;../lib/ljpeg;../lib/lmng;../lib/openal/win32;../lib/fmod/inc;../engine;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>../lib/libqslim;../lib/vorbis/include;../lib/zlib;../lib/lungif;../lib/lpng;../lib/ljpeg;../lib/lmng;../lib/discord;../lib/openal/win32;../lib/fmod/inc;../engine;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>TORQUE_RELEASE;UNICODE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <StringPooling>true</StringPooling>
       <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
@@ -146,7 +146,7 @@
       <Culture>0x0409</Culture>
     </ResourceCompile>
     <Link>
-      <AdditionalDependencies>ljpeg.lib;lpng.lib;lungif.lib;lmng.lib;zlib.lib;d3d9.lib;dxerr.lib;d3dx9.lib;COMCTL32.LIB;COMDLG32.LIB;USER32.LIB;ADVAPI32.LIB;GDI32.LIB;WINMM.LIB;WSOCK32.LIB;vfw32.lib;../lib/vorbis/win32/ogg_static.lib;../lib/vorbis/win32/vorbis_static_mt.lib;../lib/fmod/lib/fmodex_vc.lib;imm32.lib;version.lib;libqslim.lib;ole32.lib;oleaut32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>ljpeg.lib;lpng.lib;lungif.lib;lmng.lib;zlib.lib;d3d9.lib;dxerr.lib;d3dx9.lib;COMCTL32.LIB;COMDLG32.LIB;USER32.LIB;ADVAPI32.LIB;GDI32.LIB;WINMM.LIB;WSOCK32.LIB;vfw32.lib;../lib/vorbis/win32/ogg_static.lib;../lib/vorbis/win32/vorbis_static_mt.lib;../lib/fmod/lib/fmodex_vc.lib;imm32.lib;version.lib;libqslim.lib;ole32.lib;oleaut32.lib;../lib/discord/discord_game_sdk.dll.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <SuppressStartupBanner>true</SuppressStartupBanner>
       <AdditionalLibraryDirectories>../lib/out.VC16.win32.release/;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <IgnoreSpecificDefaultLibraries>LIBC;%(IgnoreSpecificDefaultLibraries)</IgnoreSpecificDefaultLibraries>
@@ -168,7 +168,7 @@
     <ClCompile>
       <Optimization>MaxSpeed</Optimization>
       <InlineFunctionExpansion>OnlyExplicitInline</InlineFunctionExpansion>
-      <AdditionalIncludeDirectories>../lib/vorbis/include;../lib/zlib;../lib/lungif;../lib/lpng;../lib/ljpeg;../lib/lmng;../lib/openal/win32;../lib/fmod/inc;../lib/libqslim;../engine;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>../lib/discord;../lib/vorbis/include;../lib/zlib;../lib/lungif;../lib/lpng;../lib/ljpeg;../lib/lmng;../lib/openal/win32;../lib/fmod/inc;../lib/libqslim;../engine;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>TORQUE_RELEASE;UNICODE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <StringPooling>true</StringPooling>
       <BasicRuntimeChecks>Default</BasicRuntimeChecks>
@@ -188,7 +188,7 @@
       <Culture>0x0409</Culture>
     </ResourceCompile>
     <Link>
-      <AdditionalDependencies>ljpeg.lib;lpng.lib;lungif.lib;lmng.lib;zlib.lib;d3d9.lib;dxerr.lib;d3dx9.lib;COMCTL32.LIB;COMDLG32.LIB;USER32.LIB;ADVAPI32.LIB;GDI32.LIB;WINMM.LIB;WSOCK32.LIB;vfw32.lib;../lib/vorbis/win32/ogg_static.lib;../lib/vorbis/win32/vorbis_static_mt.lib;../lib/fmod/lib/fmodex_vc.lib;imm32.lib;version.lib;libqslim.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>ljpeg.lib;lpng.lib;lungif.lib;lmng.lib;zlib.lib;d3d9.lib;dxerr.lib;d3dx9.lib;COMCTL32.LIB;COMDLG32.LIB;USER32.LIB;ADVAPI32.LIB;GDI32.LIB;WINMM.LIB;WSOCK32.LIB;vfw32.lib;../lib/vorbis/win32/ogg_static.lib;../lib/vorbis/win32/vorbis_static_mt.lib;../lib/fmod/lib/fmodex_vc.lib;imm32.lib;version.lib;libqslim.lib;../lib/discord/discord_game_sdk.dll.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <SuppressStartupBanner>true</SuppressStartupBanner>
       <AdditionalLibraryDirectories>../lib/out.VC16.win32.release/;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <IgnoreAllDefaultLibraries>false</IgnoreAllDefaultLibraries>
@@ -3508,6 +3508,20 @@
     <ClCompile Include="..\engine\util\rectClipper.cpp" />
     <ClCompile Include="..\engine\util\triBoxCheck.cpp" />
     <ClCompile Include="..\engine\xblive\xbliveFunctions.cpp" />
+    <ClCompile Include="C:\Users\erikm\Downloads\discord_game_sdk\cpp\achievement_manager.cpp" />
+    <ClCompile Include="C:\Users\erikm\Downloads\discord_game_sdk\cpp\activity_manager.cpp" />
+    <ClCompile Include="C:\Users\erikm\Downloads\discord_game_sdk\cpp\application_manager.cpp" />
+    <ClCompile Include="C:\Users\erikm\Downloads\discord_game_sdk\cpp\core.cpp" />
+    <ClCompile Include="C:\Users\erikm\Downloads\discord_game_sdk\cpp\image_manager.cpp" />
+    <ClCompile Include="C:\Users\erikm\Downloads\discord_game_sdk\cpp\lobby_manager.cpp" />
+    <ClCompile Include="C:\Users\erikm\Downloads\discord_game_sdk\cpp\network_manager.cpp" />
+    <ClCompile Include="C:\Users\erikm\Downloads\discord_game_sdk\cpp\overlay_manager.cpp" />
+    <ClCompile Include="C:\Users\erikm\Downloads\discord_game_sdk\cpp\relationship_manager.cpp" />
+    <ClCompile Include="C:\Users\erikm\Downloads\discord_game_sdk\cpp\storage_manager.cpp" />
+    <ClCompile Include="C:\Users\erikm\Downloads\discord_game_sdk\cpp\store_manager.cpp" />
+    <ClCompile Include="C:\Users\erikm\Downloads\discord_game_sdk\cpp\types.cpp" />
+    <ClCompile Include="C:\Users\erikm\Downloads\discord_game_sdk\cpp\user_manager.cpp" />
+    <ClCompile Include="C:\Users\erikm\Downloads\discord_game_sdk\cpp\voice_manager.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\engine\atlas\atlasCollision.h" />
@@ -3969,6 +3983,23 @@
     <ClInclude Include="..\engine\util\triBoxCheck.h" />
     <ClInclude Include="..\engine\util\tSignal.h" />
     <ClInclude Include="..\example\shaders\shdrConsts.h" />
+    <ClInclude Include="C:\Users\erikm\Downloads\discord_game_sdk\cpp\achievement_manager.h" />
+    <ClInclude Include="C:\Users\erikm\Downloads\discord_game_sdk\cpp\activity_manager.h" />
+    <ClInclude Include="C:\Users\erikm\Downloads\discord_game_sdk\cpp\application_manager.h" />
+    <ClInclude Include="C:\Users\erikm\Downloads\discord_game_sdk\cpp\core.h" />
+    <ClInclude Include="C:\Users\erikm\Downloads\discord_game_sdk\cpp\discord.h" />
+    <ClInclude Include="C:\Users\erikm\Downloads\discord_game_sdk\cpp\event.h" />
+    <ClInclude Include="C:\Users\erikm\Downloads\discord_game_sdk\cpp\ffi.h" />
+    <ClInclude Include="C:\Users\erikm\Downloads\discord_game_sdk\cpp\image_manager.h" />
+    <ClInclude Include="C:\Users\erikm\Downloads\discord_game_sdk\cpp\lobby_manager.h" />
+    <ClInclude Include="C:\Users\erikm\Downloads\discord_game_sdk\cpp\network_manager.h" />
+    <ClInclude Include="C:\Users\erikm\Downloads\discord_game_sdk\cpp\overlay_manager.h" />
+    <ClInclude Include="C:\Users\erikm\Downloads\discord_game_sdk\cpp\relationship_manager.h" />
+    <ClInclude Include="C:\Users\erikm\Downloads\discord_game_sdk\cpp\storage_manager.h" />
+    <ClInclude Include="C:\Users\erikm\Downloads\discord_game_sdk\cpp\store_manager.h" />
+    <ClInclude Include="C:\Users\erikm\Downloads\discord_game_sdk\cpp\types.h" />
+    <ClInclude Include="C:\Users\erikm\Downloads\discord_game_sdk\cpp\user_manager.h" />
+    <ClInclude Include="C:\Users\erikm\Downloads\discord_game_sdk\cpp\voice_manager.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="..\engine\.editorconfig" />
