Started implementing login

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,4 +4,7 @@ project(MBUltra)
 
 set(CMAKE_CXX_STANDARD 14)
 
+set(ProjectOutDir "${CMAKE_SOURCE_DIR}/game")
+
+add_subdirectory(engine/lib/OpenMBU-WebAPI)
 add_subdirectory(tools/cmake)
