--- a/.github/ISSUE_TEMPLATE/BUG_REPORT.yml
+++ b/.github/ISSUE_TEMPLATE/BUG_REPORT.yml
@@ -1,7 +1,16 @@
 name: Bug Report
 description: Report a bug in OpenMBU
-labels: ["Type: Bug", "NEW ISSUE"]
+title: "[BUG] "
+labels: ["bug"]
 body:
+- type: markdown
+  attributes:
+    value: |
+      If you have a question or need help, proceed here:
+      OpenMBU Discord (#help) - https://discord.gg/z6jJzRu
+      Otherwise make a bug report
+      
+      Try to create a very concise title that's straight to the point
 - type: checkboxes
   attributes:
     label: Is there an existing issue for this?
@@ -60,6 +69,10 @@ body:
       - Windows 7 (Not Supported)
       - Windows Vista (Not Supported)
       - Windows XP (Not Supported)
+      - Linux (Proton)
+      - Linux (Wine)
+      - Linux (Native)
+      - MacOS (unsupported)
   validations:
     required: true  
 - type: textarea
@@ -74,7 +87,7 @@ body:
   attributes:
     label: Log File
     description: |
-      Please attach the `console.log` file here. You'll find the log file in the game installation folder. Look for the `console.log` file. 
+      Please attach the `console.log` file here. You'll find the log file in the folder where the game is installed, if it's not there, it's because your running the game from a protected location such as ``C:\Program Files\OpenMBU`` and we don't recommend that. 
       
       Tip: You can attach images or log files by clicking this area to highlight it and then dragging files in.
 - type: textarea
