--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -23,31 +23,39 @@ jobs:
       #
       # To add more build types (Release, Debug, RelWithDebInfo, etc.) customize the build_type list.
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
+        os: [windows-latest, ubuntu-latest, macos-latest]
         build_type: [Release]
-        c_compiler: [gcc, clang, cl]
+        c_compiler: [cl, clang, gcc]
+        asm_compiler: [nasm]
         include:
           - os: windows-latest
             c_compiler: cl
             cpp_compiler: cl
+            asm_compiler: nasm
           - os: windows-latest
             c_compiler: gcc
             cpp_compiler: g++
+            asm_compiler: nasm
           - os: windows-latest
             c_compiler: clang
             cpp_compiler: clang++
+            asm_compiler: nasm
           - os: ubuntu-latest
             c_compiler: gcc
             cpp_compiler: g++
+            asm_compiler: nasm
           - os: ubuntu-latest
             c_compiler: clang
             cpp_compiler: clang++
+            asm_compiler: nasm
           - os: macos-latest
             c_compiler: gcc
             cpp_compiler: g++
+            asm_compiler: nasm
           - os: macos-latest
             c_compiler: clang
             cpp_compiler: clang++
+            asm_compiler: nasm
         exclude:
           #- os: windows-latest
           #  c_compiler: gcc
@@ -76,6 +84,7 @@ jobs:
         cmake -B ${{ steps.strings.outputs.build-output-dir }}
         -DCMAKE_CXX_COMPILER=${{ matrix.cpp_compiler }}
         -DCMAKE_C_COMPILER=${{ matrix.c_compiler }}
+        -DCMAKE_ASM_NASM_COMPILER=${{ matrix.asm_compiler }}
         -DCMAKE_BUILD_TYPE=${{ matrix.build_type }}
         -S ${{ github.workspace }}
 
@@ -92,5 +101,5 @@ jobs:
     - name: Archive production artifacts
       uses: actions/upload-artifact@v3
       with:
-        name: OpenMBU-Artifacts
+        name: OpenMBU-${{ matrix.os }}-${{ matrix.c_compiler }}
         path: game
