--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -54,7 +54,7 @@ jobs:
             asm_compiler: nasm
             artifact_name: MacOS-Clang
             install_prerequsites: brew install nasm sdl
-            mac_cmake_args: -DCMAKE_OSX_ARCHITECTURES="x86_64;arm64" -DCMAKE_OSX_DEPLOYMENT_TARGET="10.15"
+            mac_cmake_args: -DCMAKE_OSX_ARCHITECTURES="x86_64" -DCMAKE_OSX_DEPLOYMENT_TARGET="10.15"
         exclude:
           #- os: windows-latest
           #  c_compiler: gcc
