--- a/.github/workflows/cmake-linux.yml
+++ b/.github/workflows/cmake-linux.yml
@@ -5,6 +5,8 @@ name: CMake on Linux
 on:
   push:
     branches: [ "master" ]
+    paths-ignore:
+      - '**/README.md'
   pull_request:
     branches: [ "master" ]
 
